--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^7.0.1",
     "sass": "^1.81.0",
