--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^7.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.81.0",
     "zustand": "^5.0.1"
   },
@@ -25,6 +26,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-modal": "^3.16.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
